--- a/package.json
+++ b/package.json
@@ -1,25 +1,29 @@
 {
-  "name": "college-system-backend",
+  "name": "college-system-frontend",
   "version": "1.0.0",
-  "description": "EduChain Backend API with Algorand Blockchain Integration",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
-  },
+  "private": true,
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^8.0.3",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "multer": "^1.4.5-lts.1",
-    "qrcode": "^1.5.3",
-    "algosdk": "^2.7.0",
-    "crypto": "^1.0.1"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.20.0",
+    "axios": "^1.6.2",
+    "lucide-react": "^0.294.0",
+    "recharts": "^2.10.3",
+    "qrcode.react": "^3.1.0",
+    "date-fns": "^3.0.0",
+    "framer-motion": "^10.16.16",
+    "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.3.6",
+    "vite": "^5.0.8"
+  },
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   }
 }
